--- a/.github/workflows/deploying.yml
+++ b/.github/workflows/deploying.yml
@@ -48,4 +48,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
-        cname: test.squeezebox.dev
+        cname: movie.squeezebox.dev
